<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/item_account"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/operations"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_operations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_operation"/>

    <Button
        android:id="@+id/btn_add_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_operation"/>

    <Button
        android:id="@+id/btn_remove_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_account"/>

</LinearLayout>